--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.16.5",
+    "cnjm-postcss-px-to-viewport": "^1.0.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
